trunk/ci-praktikum/src/antlr/srcfiles/miniPParser.java
package antlr.srcfiles;// $ANTLR 3.4 Z:\\AI4\\CI\\p1\\miniP.g 2013-04-30 12:41:40

import org.antlr.runtime.*;

import org.antlr.runtime.debug.*;
import java.io.IOException;
import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class miniPParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASSIGNING_OP", "BEGIN", "BODY", "BOOLEAN_TYP", "CLOSEING_BRACKET", "DANN", "DIGIT", "DIV", "EGNALOS", "END", "FLOAT_CONST", "FLOAT_TYP", "ID", "INIT", "INTEGER_TYP", "INT_CONST", "LETTER", "MINUS", "MUL", "MULTILINE_COMMENT", "NNEW", "OPENING_BRACKET", "PLUS", "PRINTLN", "PROGRAMM", "READ", "RELOP", "SEPERATOR", "SOLANGE", "SONST", "SPECIALCHARACTER", "STATEMENT_END", "STRING_CONST", "STRING_TYP", "TUE", "WENN", "WHITESPACE", "'false'", "'true'"
    };

    public static final int EOF=-1;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int ASSIGNING_OP=4;
    public static final int BEGIN=5;
    public static final int BODY=6;
    public static final int BOOLEAN_TYP=7;
    public static final int CLOSEING_BRACKET=8;
    public static final int DANN=9;
    public static final int DIGIT=10;
    public static final int DIV=11;
    public static final int EGNALOS=12;
    public static final int END=13;
    public static final int FLOAT_CONST=14;
    public static final int FLOAT_TYP=15;
    public static final int ID=16;
    public static final int INIT=17;
    public static final int INTEGER_TYP=18;
    public static final int INT_CONST=19;
    public static final int LETTER=20;
    public static final int MINUS=21;
    public static final int MUL=22;
    public static final int MULTILINE_COMMENT=23;
    public static final int NNEW=24;
    public static final int OPENING_BRACKET=25;
    public static final int PLUS=26;
    public static final int PRINTLN=27;
    public static final int PROGRAMM=28;
    public static final int READ=29;
    public static final int RELOP=30;
    public static final int SEPERATOR=31;
    public static final int SOLANGE=32;
    public static final int SONST=33;
    public static final int SPECIALCHARACTER=34;
    public static final int STATEMENT_END=35;
    public static final int STRING_CONST=36;
    public static final int STRING_TYP=37;
    public static final int TUE=38;
    public static final int WENN=39;
    public static final int WHITESPACE=40;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


public static final String[] ruleNames = new String[] {
    "invalidRule", "possible_assignments", "statement", "solange_statement", 
    "comparison", "body", "constants", "term", "assignment", "arithmetic_expression", 
    "start", "declaration", "dann_statement", "wenn_statement", "init", 
    "var_typ", "println", "tue_statement", "read", "sonst_statement", "factor"
};

public static final boolean[] decisionCanBacktrack = new boolean[] {
    false, // invalid decision
    false, false, false, false, false, false, false, false, false, false, 
        false, false, false, false, false, false, false
};

 
    public int ruleLevel = 0;
    public int getRuleLevel() { return ruleLevel; }
    public void incRuleLevel() { ruleLevel++; }
    public void decRuleLevel() { ruleLevel--; }
    public miniPParser(TokenStream input) {
        this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
    }
    public miniPParser(TokenStream input, int port, RecognizerSharedState state) {
        super(input, state);
        DebugEventSocketProxy proxy =
            new DebugEventSocketProxy(this,port,adaptor);
        setDebugListener(proxy);
        setTokenStream(new DebugTokenStream(input,proxy));
        try {
            proxy.handshake();
        }
        catch (IOException ioe) {
            reportError(ioe);
        }
        TreeAdaptor adap = new CommonTreeAdaptor();
        setTreeAdaptor(adap);
        proxy.setTreeAdaptor(adap);
    }

public miniPParser(TokenStream input, DebugEventListener dbg) {
    super(input, dbg);
     
    TreeAdaptor adap = new CommonTreeAdaptor();
    setTreeAdaptor(adap);


}

protected boolean evalPredicate(boolean result, String predicate) {
    dbg.semanticPredicate(result, predicate);
    return result;
}

protected DebugTreeAdaptor adaptor;
public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = new DebugTreeAdaptor(dbg,adaptor);


}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}

    public String[] getTokenNames() { return miniPParser.tokenNames; }
    public String getGrammarFileName() { return "Z:\\AI4\\CI\\p1\\miniP.g"; }


    public static class constants_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "constants"
    // Z:\\AI4\\CI\\p1\\miniP.g:56:1: constants : ( INT_CONST | STRING_CONST | ( 'true' | 'false' ) | FLOAT_CONST ) ;
    public final miniPParser.constants_return constants() throws RecognitionException {
        miniPParser.constants_return retval = new miniPParser.constants_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token set1=null;

        CommonTree set1_tree=null;

        try { dbg.enterRule(getGrammarFileName(), "constants");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(56, 0);

        try {
            // Z:\\AI4\\CI\\p1\\miniP.g:56:12: ( ( INT_CONST | STRING_CONST | ( 'true' | 'false' ) | FLOAT_CONST ) )
            dbg.enterAlt(1);

            // Z:\\AI4\\CI\\p1\\miniP.g:
            {
            root_0 = (CommonTree)adaptor.nil();


            dbg.location(56,12);
            set1=(Token)input.LT(1);

            if ( input.LA(1)==FLOAT_CONST||input.LA(1)==INT_CONST||input.LA(1)==STRING_CONST||(input.LA(1) >= 41 && input.LA(1) <= 42) ) {
                input.consume();
                adaptor.addChild(root_0, 
                (CommonTree)adaptor.create(set1)
                );
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                dbg.recognitionException(mse);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(56, 67);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "constants");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "constants"


    public static class start_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "start"
    // Z:\\AI4\\CI\\p1\\miniP.g:65:1: start : PROGRAMM init BEGIN body END -> ^( PROGRAMM init body ) ;
    public final miniPParser.start_return start() throws RecognitionException {
        miniPParser.start_return retval = new miniPParser.start_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token PROGRAMM2=null;
        Token BEGIN4=null;
        Token END6=null;
        miniPParser.init_return init3 =null;

        miniPParser.body_return body5 =null;


        CommonTree PROGRAMM2_tree=null;
        CommonTree BEGIN4_tree=null;
        CommonTree END6_tree=null;
        RewriteRuleTokenStream stream_PROGRAMM=new RewriteRuleTokenStream(adaptor,"token PROGRAMM");
        RewriteRuleTokenStream stream_END=new RewriteRuleTokenStream(adaptor,"token END");
        RewriteRuleTokenStream stream_BEGIN=new RewriteRuleTokenStream(adaptor,"token BEGIN");
        RewriteRuleSubtreeStream stream_body=new RewriteRuleSubtreeStream(adaptor,"rule body");
        RewriteRuleSubtreeStream stream_init=new RewriteRuleSubtreeStream(adaptor,"rule init");
        try { dbg.enterRule(getGrammarFileName(), "start");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(65, 0);

        try {
            // Z:\\AI4\\CI\\p1\\miniP.g:65:7: ( PROGRAMM init BEGIN body END -> ^( PROGRAMM init body ) )
            dbg.enterAlt(1);

            // Z:\\AI4\\CI\\p1\\miniP.g:65:9: PROGRAMM init BEGIN body END
            {
            dbg.location(65,9);
            PROGRAMM2=(Token)match(input,PROGRAMM,FOLLOW_PROGRAMM_in_start465);  
            stream_PROGRAMM.add(PROGRAMM2);

            dbg.location(65,18);
            pushFollow(FOLLOW_init_in_start467);
            init3=init();

            state._fsp--;

            stream_init.add(init3.getTree());
            dbg.location(65,23);
            BEGIN4=(Token)match(input,BEGIN,FOLLOW_BEGIN_in_start469);  
            stream_BEGIN.add(BEGIN4);

            dbg.location(65,29);
            pushFollow(FOLLOW_body_in_start471);
            body5=body();

            state._fsp--;

            stream_body.add(body5.getTree());
            dbg.location(65,34);
            END6=(Token)match(input,END,FOLLOW_END_in_start473);  
            stream_END.add(END6);


            // AST REWRITE
            // elements: init, PROGRAMM, body
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 65:38: -> ^( PROGRAMM init body )
            {
                dbg.location(65,40);
                // Z:\\AI4\\CI\\p1\\miniP.g:65:40: ^( PROGRAMM init body )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                dbg.location(65,42);
                root_1 = (CommonTree)adaptor.becomeRoot(
                stream_PROGRAMM.nextNode()
                , root_1);

                dbg.location(65,51);
                adaptor.addChild(root_1, stream_init.nextTree());
                dbg.location(65,56);
                adaptor.addChild(root_1, stream_body.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(65, 60);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "start");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "start"


    public static class init_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "init"
    // Z:\\AI4\\CI\\p1\\miniP.g:66:1: init : ( declaration )* -> ^( INIT ( declaration )* ) ;
    public final miniPParser.init_return init() throws RecognitionException {
        miniPParser.init_return retval = new miniPParser.init_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        miniPParser.declaration_return declaration7 =null;


        RewriteRuleSubtreeStream stream_declaration=new RewriteRuleSubtreeStream(adaptor,"rule declaration");
        try { dbg.enterRule(getGrammarFileName(), "init");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(66, 0);

        try {
            // Z:\\AI4\\CI\\p1\\miniP.g:66:6: ( ( declaration )* -> ^( INIT ( declaration )* ) )
            dbg.enterAlt(1);

            // Z:\\AI4\\CI\\p1\\miniP.g:66:8: ( declaration )*
            {
            dbg.location(66,8);
            // Z:\\AI4\\CI\\p1\\miniP.g:66:8: ( declaration )*
            try { dbg.enterSubRule(1);

            loop1:
            do {
                int alt1=2;
                try { dbg.enterDecision(1, decisionCanBacktrack[1]);

                int LA1_0 = input.LA(1);

                if ( (LA1_0==BOOLEAN_TYP||LA1_0==FLOAT_TYP||LA1_0==INTEGER_TYP||LA1_0==STRING_TYP) ) {
                    alt1=1;
                }


                } finally {dbg.exitDecision(1);}

                switch (alt1) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // Z:\\AI4\\CI\\p1\\miniP.g:66:8: declaration
            	    {
            	    dbg.location(66,8);
            	    pushFollow(FOLLOW_declaration_in_init489);
            	    declaration7=declaration();

            	    state._fsp--;

            	    stream_declaration.add(declaration7.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);
            } finally {dbg.exitSubRule(1);}


            // AST REWRITE
            // elements: declaration
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 66:21: -> ^( INIT ( declaration )* )
            {
                dbg.location(66,24);
                // Z:\\AI4\\CI\\p1\\miniP.g:66:24: ^( INIT ( declaration )* )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                dbg.location(66,26);
                root_1 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(INIT, "INIT")
                , root_1);

                dbg.location(66,31);
                // Z:\\AI4\\CI\\p1\\miniP.g:66:31: ( declaration )*
                while ( stream_declaration.hasNext() ) {
                    dbg.location(66,31);
                    adaptor.addChild(root_1, stream_declaration.nextTree());

                }
                stream_declaration.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(66, 43);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "init");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "init"


    public static class body_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "body"
    // Z:\\AI4\\CI\\p1\\miniP.g:67:1: body : ( statement )+ -> ^( BODY ( statement )+ ) ;
    public final miniPParser.body_return body() throws RecognitionException {
        miniPParser.body_return retval = new miniPParser.body_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        miniPParser.statement_return statement8 =null;


        RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
        try { dbg.enterRule(getGrammarFileName(), "body");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(67, 0);

        try {
            // Z:\\AI4\\CI\\p1\\miniP.g:67:6: ( ( statement )+ -> ^( BODY ( statement )+ ) )
            dbg.enterAlt(1);

            // Z:\\AI4\\CI\\p1\\miniP.g:67:8: ( statement )+
            {
            dbg.location(67,8);
            // Z:\\AI4\\CI\\p1\\miniP.g:67:8: ( statement )+
            int cnt2=0;
            try { dbg.enterSubRule(2);

            loop2:
            do {
                int alt2=2;
                try { dbg.enterDecision(2, decisionCanBacktrack[2]);

                int LA2_0 = input.LA(1);

                if ( (LA2_0==ID||LA2_0==MULTILINE_COMMENT||LA2_0==PRINTLN||LA2_0==READ||LA2_0==SOLANGE||LA2_0==WENN) ) {
                    alt2=1;
                }


                } finally {dbg.exitDecision(2);}

                switch (alt2) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // Z:\\AI4\\CI\\p1\\miniP.g:67:8: statement
            	    {
            	    dbg.location(67,8);
            	    pushFollow(FOLLOW_statement_in_body506);
            	    statement8=statement();

            	    state._fsp--;

            	    stream_statement.add(statement8.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt2 >= 1 ) break loop2;
                        EarlyExitException eee =
                            new EarlyExitException(2, input);
                        dbg.recognitionException(eee);

                        throw eee;
                }
                cnt2++;
            } while (true);
            } finally {dbg.exitSubRule(2);}


            // AST REWRITE
            // elements: statement
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 67:19: -> ^( BODY ( statement )+ )
            {
                dbg.location(67,22);
                // Z:\\AI4\\CI\\p1\\miniP.g:67:22: ^( BODY ( statement )+ )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                dbg.location(67,24);
                root_1 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(BODY, "BODY")
                , root_1);

                dbg.location(67,29);
                if ( !(stream_statement.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_statement.hasNext() ) {
                    dbg.location(67,29);
                    adaptor.addChild(root_1, stream_statement.nextTree());

                }
                stream_statement.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(67, 39);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "body");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "body"


    public static class declaration_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "declaration"
    // Z:\\AI4\\CI\\p1\\miniP.g:69:1: declaration : var_typ ^ ID ( SEPERATOR ! ID )* STATEMENT_END !;
    public final miniPParser.declaration_return declaration() throws RecognitionException {
        miniPParser.declaration_return retval = new miniPParser.declaration_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token ID10=null;
        Token SEPERATOR11=null;
        Token ID12=null;
        Token STATEMENT_END13=null;
        miniPParser.var_typ_return var_typ9 =null;


        CommonTree ID10_tree=null;
        CommonTree SEPERATOR11_tree=null;
        CommonTree ID12_tree=null;
        CommonTree STATEMENT_END13_tree=null;

        try { dbg.enterRule(getGrammarFileName(), "declaration");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(69, 0);

        try {
            // Z:\\AI4\\CI\\p1\\miniP.g:69:13: ( var_typ ^ ID ( SEPERATOR ! ID )* STATEMENT_END !)
            dbg.enterAlt(1);

            // Z:\\AI4\\CI\\p1\\miniP.g:69:15: var_typ ^ ID ( SEPERATOR ! ID )* STATEMENT_END !
            {
            root_0 = (CommonTree)adaptor.nil();


            dbg.location(69,22);
            pushFollow(FOLLOW_var_typ_in_declaration524);
            var_typ9=var_typ();

            state._fsp--;

            root_0 = (CommonTree)adaptor.becomeRoot(var_typ9.getTree(), root_0);
            dbg.location(69,24);
            ID10=(Token)match(input,ID,FOLLOW_ID_in_declaration527); 
            ID10_tree = 
            (CommonTree)adaptor.create(ID10)
            ;
            adaptor.addChild(root_0, ID10_tree);

            dbg.location(69,27);
            // Z:\\AI4\\CI\\p1\\miniP.g:69:27: ( SEPERATOR ! ID )*
            try { dbg.enterSubRule(3);

            loop3:
            do {
                int alt3=2;
                try { dbg.enterDecision(3, decisionCanBacktrack[3]);

                int LA3_0 = input.LA(1);

                if ( (LA3_0==SEPERATOR) ) {
                    alt3=1;
                }


                } finally {dbg.exitDecision(3);}

                switch (alt3) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // Z:\\AI4\\CI\\p1\\miniP.g:69:28: SEPERATOR ! ID
            	    {
            	    dbg.location(69,37);
            	    SEPERATOR11=(Token)match(input,SEPERATOR,FOLLOW_SEPERATOR_in_declaration530); 
            	    dbg.location(69,39);
            	    ID12=(Token)match(input,ID,FOLLOW_ID_in_declaration533); 
            	    ID12_tree = 
            	    (CommonTree)adaptor.create(ID12)
            	    ;
            	    adaptor.addChild(root_0, ID12_tree);


            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);
            } finally {dbg.exitSubRule(3);}

            dbg.location(69,57);
            STATEMENT_END13=(Token)match(input,STATEMENT_END,FOLLOW_STATEMENT_END_in_declaration537); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(69, 57);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "declaration");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "declaration"


    public static class var_typ_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "var_typ"
    // Z:\\AI4\\CI\\p1\\miniP.g:70:1: var_typ : ( INTEGER_TYP | FLOAT_TYP | BOOLEAN_TYP | STRING_TYP ) ;
    public final miniPParser.var_typ_return var_typ() throws RecognitionException {
        miniPParser.var_typ_return retval = new miniPParser.var_typ_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token set14=null;

        CommonTree set14_tree=null;

        try { dbg.enterRule(getGrammarFileName(), "var_typ");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(70, 0);

        try {
            // Z:\\AI4\\CI\\p1\\miniP.g:70:9: ( ( INTEGER_TYP | FLOAT_TYP | BOOLEAN_TYP | STRING_TYP ) )
            dbg.enterAlt(1);

            // Z:\\AI4\\CI\\p1\\miniP.g:
            {
            root_0 = (CommonTree)adaptor.nil();


            dbg.location(70,9);
            set14=(Token)input.LT(1);

            if ( input.LA(1)==BOOLEAN_TYP||input.LA(1)==FLOAT_TYP||input.LA(1)==INTEGER_TYP||input.LA(1)==STRING_TYP ) {
                input.consume();
                adaptor.addChild(root_0, 
                (CommonTree)adaptor.create(set14)
                );
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                dbg.recognitionException(mse);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(70, 64);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "var_typ");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "var_typ"


    public static class statement_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "statement"
    // Z:\\AI4\\CI\\p1\\miniP.g:72:1: statement : ( assignment | wenn_statement | solange_statement | read | println | MULTILINE_COMMENT !) ;
    public final miniPParser.statement_return statement() throws RecognitionException {
        miniPParser.statement_return retval = new miniPParser.statement_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token MULTILINE_COMMENT20=null;
        miniPParser.assignment_return assignment15 =null;

        miniPParser.wenn_statement_return wenn_statement16 =null;

        miniPParser.solange_statement_return solange_statement17 =null;

        miniPParser.read_return read18 =null;

        miniPParser.println_return println19 =null;


        CommonTree MULTILINE_COMMENT20_tree=null;

        try { dbg.enterRule(getGrammarFileName(), "statement");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(72, 0);

        try {
            // Z:\\AI4\\CI\\p1\\miniP.g:72:12: ( ( assignment | wenn_statement | solange_statement | read | println | MULTILINE_COMMENT !) )
            dbg.enterAlt(1);

            // Z:\\AI4\\CI\\p1\\miniP.g:72:13: ( assignment | wenn_statement | solange_statement | read | println | MULTILINE_COMMENT !)
            {
            root_0 = (CommonTree)adaptor.nil();


            dbg.location(72,13);
            // Z:\\AI4\\CI\\p1\\miniP.g:72:13: ( assignment | wenn_statement | solange_statement | read | println | MULTILINE_COMMENT !)
            int alt4=6;
            try { dbg.enterSubRule(4);
            try { dbg.enterDecision(4, decisionCanBacktrack[4]);

            switch ( input.LA(1) ) {
            case ID:
                {
                alt4=1;
                }
                break;
            case WENN:
                {
                alt4=2;
                }
                break;
            case SOLANGE:
                {
                alt4=3;
                }
                break;
            case READ:
                {
                alt4=4;
                }
                break;
            case PRINTLN:
                {
                alt4=5;
                }
                break;
            case MULTILINE_COMMENT:
                {
                alt4=6;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;

            }

            } finally {dbg.exitDecision(4);}

            switch (alt4) {
                case 1 :
                    dbg.enterAlt(1);

                    // Z:\\AI4\\CI\\p1\\miniP.g:72:14: assignment
                    {
                    dbg.location(72,14);
                    pushFollow(FOLLOW_assignment_in_statement570);
                    assignment15=assignment();

                    state._fsp--;

                    adaptor.addChild(root_0, assignment15.getTree());

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // Z:\\AI4\\CI\\p1\\miniP.g:72:26: wenn_statement
                    {
                    dbg.location(72,26);
                    pushFollow(FOLLOW_wenn_statement_in_statement573);
                    wenn_statement16=wenn_statement();

                    state._fsp--;

                    adaptor.addChild(root_0, wenn_statement16.getTree());

                    }
                    break;
                case 3 :
                    dbg.enterAlt(3);

                    // Z:\\AI4\\CI\\p1\\miniP.g:72:42: solange_statement
                    {
                    dbg.location(72,42);
                    pushFollow(FOLLOW_solange_statement_in_statement576);
                    solange_statement17=solange_statement();

                    state._fsp--;

                    adaptor.addChild(root_0, solange_statement17.getTree());

                    }
                    break;
                case 4 :
                    dbg.enterAlt(4);

                    // Z:\\AI4\\CI\\p1\\miniP.g:72:62: read
                    {
                    dbg.location(72,62);
                    pushFollow(FOLLOW_read_in_statement580);
                    read18=read();

                    state._fsp--;

                    adaptor.addChild(root_0, read18.getTree());

                    }
                    break;
                case 5 :
                    dbg.enterAlt(5);

                    // Z:\\AI4\\CI\\p1\\miniP.g:72:69: println
                    {
                    dbg.location(72,69);
                    pushFollow(FOLLOW_println_in_statement584);
                    println19=println();

                    state._fsp--;

                    adaptor.addChild(root_0, println19.getTree());

                    }
                    break;
                case 6 :
                    dbg.enterAlt(6);

                    // Z:\\AI4\\CI\\p1\\miniP.g:72:80: MULTILINE_COMMENT !
                    {
                    dbg.location(72,97);
                    MULTILINE_COMMENT20=(Token)match(input,MULTILINE_COMMENT,FOLLOW_MULTILINE_COMMENT_in_statement589); 

                    }
                    break;

            }
            } finally {dbg.exitSubRule(4);}


            }

            retval.stop = input.LT(-1);


